--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,10 @@ jobs:
         permissions:
             contents: write
         steps:
-            - name: Checkout code
+            - name: Checkout 🛎️
               uses: actions/checkout@v4
 
-            - name: Create GitHub Release
+            - name: Create GitHub Release 🚀
               uses: softprops/action-gh-release@v2
               with:
                   generate_release_notes: true
