--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ jobs:
             - name: Create GitHub Release 🚀
               uses: softprops/action-gh-release@v2
               with:
-                  generate_release_notes: true
+                generate_release_notes: true
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - uses: hydephp/action@master
+              with:
+                deploy-to: "pages"
