--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         permissions:
             contents: write
+            pages: write
         steps:
             - name: Checkout 🛎️
               uses: actions/checkout@v4
