--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,10 @@ jobs:
 
     # Deployment job
     deploy:
+      permissions:
+        contents: write
+        pages: write
+        id-token: write
       environment:
         name: github-pages
         url: ${{ steps.deployment.outputs.page_url }}
